# projectclimb-server

./: .envrc  .gitignore  Dockerfile  README.md  README_pose_replayer.md  README_session_tracker.md  TODO.txt  Untitled.ipynb  _requirements.txt  agents.md  ble_mqtt_counter.yaml  calibration.json  celery_task_setup.md  cert.pem  docker-compose.yml  examine_timestamps.py  example.env  example_pose_transformer_usage.py  example_usage.js  go2rtc.yml  go2rtc_camera_setup.md  go2rtc_integration.md  implementation_guide.md  implementation_guide_part2.md  implementation_summary.md  in.json  manual_calibration_documentation.md  node_ws_server.js  out.json  package-lock.json  package.json  pose_detector_to_websocket_summary.md  pose_replayer.py  pose_replayer_design.md  pose_replayer_implementation.md  pose_replayer_summary.md  privkey.pem  pyproject.toml  requirements.txt  run_fake_pose_maptnh.sh  (+44 more)
code/: celery_task_readme.md  check_task_status.py  demo_calibrate_chatgpt.html  demo_calibrate_deep.html  demo_calibrate_minmax.html  demo_calibrate_openrouter_glm_45_air.html  demo_calibrate_openrouter_gp5-3.html  demo_calibrate_openrouter_grok.html  demo_calibrate_openrouter_minmax.html  demo_calibrate_openrouter_qwen3_coder.html  demo_calibrate_t3_gemini25flash.html  demo_phone_chatgpt.html  example_pose_detector_usage.py  fake_hold_sender.py  fix_calibration.py  interactive_wall_simulation_documentation.md  package-lock.json  package.json  pose_detector_to_websocket.py  pose_detector_to_websocket_README.md  pose_replayer.py  pose_router.py  pose_skeleton_README.md  pose_streamer.py  pose_streamer_fake.py  pose_streamer_file_documentation.md  pose_touch_detector_documentation.md  pose_touch_detector_updated.py  pose_touch_detector_video_documentation.md  pose_touch_detector_visualization_documentation.md  pose_touch_ostanki.py  pose_viewer.py  pose_viewer_documentation.md  pose_visualizer.py  pose_visualizer_README.md  pose_visualizer_example.py  pose_visualizer_summary.md  run_pose_visualizer_demo.sh  simple_test.py  start_celery_worker.py  (+65 more)
code/app/: __init__.py  asgi.py  celery.py  celery_config.py  settings.py  urls.py
code/climber/: admin.py  apps.py  consumers.py  lundi_pred_steno.json  models.py  tasks.py  (+12 more)
plans/: interactive_wall_performance_analysis.md
src/: app.controller.ts  app.module.ts  main.ts
(+113 files in other folders)
