[project]
name = "climber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "autobahn==24.4.2",
    "automat==25.4.16",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "channels==4.2.2",
    "channels-redis>=4.2.1",
    "charset-normalizer==3.4.2",
    "constantly==23.10.4",
    "cryptography==45.0.2",
    "daphne==4.2.0",
    "decorator==5.2.1",
    "django==5.2.1",
    "django-allauth==65.8.1",
    "django-cors-headers==4.7.0",
    "django-easy-audit==1.3.7",
    "django-environ==0.12.0",
    "django-filter==25.1",
    "django-htmx==1.23.0",
    "django-tailwind==4.0.1",
    "django-unfold==0.59.0",
    "djangorestframework==3.16.0",
    "drf-yasg==1.21.10",
    "executing==2.2.0",
    "hyperlink==21.0.0",
    "idna==3.10",
    "incremental==24.7.2",
    "inflection==0.5.1",
    "ipython==9.2.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "markdown==3.8",
    "matplotlib-inline==0.1.7",
    "mediapipe",
    "oauthlib==3.2.2",
    "opencv-python>=4.12.0.88",
    "packaging==25.0",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "prompt-toolkit==3.0.51",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pygments==2.19.1",
    "pyjwt==2.10.1",
    "pyopenssl==25.1.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "service-identity==24.2.0",
    "setuptools==80.8.0",
    "sqlparse==0.5.3",
    "stack-data==0.6.3",
    "svglib>=1.6.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "traitlets==5.14.3",
    "twisted==24.11.0",
    "txaio==23.1.1",
    "typing-extensions==4.13.2",
    "ultralytics>=8.3.177",
    "uritemplate==4.1.1",
    "urllib3==2.4.0",
    "wcwidth==0.2.13",
    "websockets",
    "whitenoise==6.9.0",
    "zope-interface==7.2",
    "celery[redis]",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "numpy>=2,<2.3.0",
    "homography>=0.1.7",
    "django-revproxy>=0.13.0",
    "pygame>=2.6.1",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "svg-py>=1.9.2",
    "flower>=2.0.1",
]
